# equilibrium-cot-analyzer

./: .env.example  .gitignore  BACKEND_REFACTOR_PLAN.md  COT_IMPLEMENTATION_PLAN.md  FRONTEND_REFACTOR_PLAN.md  MARKET_INVENTORY.md  README.md  context.md  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  BACKEND_README.md  alembic.ini  analytics.py  auto_update.py  calculator.py  config.py  data_health_check.py  downloader.py  exporter.py  parser.py  pipeline.py  price_downloader.py  pyproject.toml  requirements.txt  seed_users.py  storage.py  tg_bot.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_auth.py  002_journal_tables.py  003_image_caption.py  004_oauth_email_verification.py  005_journal_settings_nickname.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  email.py  exceptions.py  logging.py  migrations.py  models.py  scheduler.py  security.py
backend/app/middleware/: auth.py
backend/app/modules/: __init__.py
backend/app/modules/admin/: router.py
backend/app/modules/auth/: oauth.py  router.py  schemas.py  service.py
backend/app/modules/cot/: __init__.py  builder.py  calculator.py  config.py  constants.py  dependencies.py  downloader.py  exporter.py  parser.py  pipeline.py  router.py  scheduler.py  schemas.py  service.py  storage.py
backend/app/modules/journal/: analyzer.py  config.py  dependencies.py  image_service.py  models.py  router.py  schemas.py  service.py  storage.py
backend/app/modules/market_data/: btc_service.py  router.py
backend/app/utils/: __init__.py  categories.py
backend/data/: .gitkeep  btc_cache.csv  ticker_map.json
backend/scripts/: auto_update.py  health_check.py  migrate_crypto.py  run_pipeline.py  run_server.py
backend/tests/: conftest.py
(+208 files in other folders)
